<resources>
    <string name="app_name">AndroidAcademyHW1</string>
    <string name="back">Back</string>
    <string name="arrowBack"><![CDATA[<]]></string>
    <string name="avengers">Avengers: \nEnd Game</string>
    <string name="avengers1">Avengers: End Game</string>
    <string name="thirteen">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="review">125 Reviews</string>
    <string name="after_the_d">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos\'
        actions and restore balance to the universe.</string>
    <string name="storyLine">Storyline</string>
    <string name="cast">Cast</string>
    <string name="robert_down">Robert\nDowney Jr.</string>
    <string name="chrisEvans">Chris\nEvans</string>
    <string name="markRuffalo">Mark\nRuffalo</string>
    <string name="chrisHemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="min">137 min</string>




</resources>