<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fill"
    tools:context=".FragmentMovieDetails">

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:scaleType="fitXY"
        android:src="@drawable/orig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:background="@drawable/gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:alpha="0.5"
        android:lineSpacingExtra="2sp"
        android:text="@string/back"
        android:textAppearance="@style/back"
        app:layout_constraintStart_toStartOf="@+id/title_image"
        app:layout_constraintTop_toTopOf="@+id/title_image" />

    <TextView
        android:layout_width="6dp"
        android:layout_height="16dp"
        android:layout_marginTop="56dp"
        android:alpha="0.5"
        android:lineSpacingExtra="2sp"
        android:text="@string/arrowBack"
        android:textAppearance="@style/back"
        app:layout_constraintEnd_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/title_image" />

    <TextView
        android:id="@+id/minimumAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="226dp"
        android:background="@drawable/rectangle"
        android:text="@string/thirteen"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/title_image"
        app:layout_constraintTop_toTopOf="@+id/title_image" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/avengers"
        android:textAppearance="@style/avengers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minimumAge" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/tag"
        android:textAppearance="@style/tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/rating_bar"
        android:theme="@style/MyRatingBar"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="3"
        android:isIndicator="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre"
        />

    <TextView
        android:id="@+id/review"
        android:layout_width="112dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8.89dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/review"
        android:textAppearance="@style/review"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/storyLine"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/storyLine"
        android:textAppearance="@style/storyLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.75"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/after_the_d"
        android:textAppearance="@style/after_the_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyLine" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/cast"
        android:textAppearance="@style/storyLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerViewActors"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cast"
        android:layout_marginTop="7dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:listitem="@layout/view_holder_actor"
        />
</androidx.constraintlayout.widget.ConstraintLayout>