<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="812dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:id="@+id/bg"
    tools:context=".MovieDetailsActivity"
    android:background="@color/fill"
    >

    <ImageView
       android:src="@drawable/orig"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"/>

    <View
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="-24dp"
        android:background="@drawable/gradient"
        />


    <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="375dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:background="#00000000"/>

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="42dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/back1"
            android:text="@string/arrowBack"
            android:textAppearance="@style/back"
            android:lineSpacingExtra="2sp"
            android:alpha="0.5"
            />

        <TextView
            android:id="@+id/back1"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textAppearance="@style/back"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            android:alpha="0.5"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="343dp"
        android:layout_height="112dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="198dp"
        android:elevation="4dp">

        <RelativeLayout
            android:id="@+id/pg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
           >
            <TextView
                android:id="@+id/some_id"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/rectangle"
                />

        </RelativeLayout>
        <TextView
            android:id="@+id/name"
            android:layout_width="343dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textAppearance="@style/name"
            android:lineSpacingExtra="0sp"
            android:gravity="center_vertical"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="343dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="314dp"
        android:elevation="4dp">

        <TextView
            android:id="@+id/tag"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/tag"
            android:textAppearance="@style/tag"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="343dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="338dp"
        android:elevation="4dp">

        <TextView
            android:id="@+id/review"
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:layout_marginStart="87dp"
            android:layout_centerVertical="true"
            android:text="@string/review"
            android:textAppearance="@style/review"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            />
        <View
            android:id="@+id/star_icon1"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_star_24"
            />

        <View
            android:id="@+id/star_icon2"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16.27dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_star_24"
            />
        <View
            android:id="@+id/star_icon3"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32.55dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_star_24"
            />
        <View
            android:id="@+id/star_icon4"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48.82dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_star_24"
            />
        <View
            android:id="@+id/star_icon5"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="65.09dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_star_24_"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="382dp"
        android:elevation="4dp">

        <TextView
            android:id="@+id/storyLine"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/storyLine"
            android:textAppearance="@style/storyLine"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/after_the_d"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:text="@string/after_the_d"
            android:textAppearance="@style/after_the_d"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            android:alpha="0.75"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="554dp"
        android:elevation="4dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="243dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/cast"
            android:textAppearance="@style/storyLine"
            android:lineSpacingExtra="8sp"
            android:gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentStart="true"
            android:elevation="4dp"
            android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:elevation="4dp"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/icon1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/robert_downey_jr"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/robert_down"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="@string/robert_down"
                android:textAppearance="@style/storyLine"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:elevation="4dp"

            >
            <ImageView
                android:id="@+id/icon2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/chris_evans"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/chrisEvans"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="@string/chrisEvans"
                android:textAppearance="@style/storyLine"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:elevation="4dp"

            >
            <ImageView
                android:id="@+id/icon3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mark_ruffalo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/markRuffalo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="@string/markRuffalo"
                android:textAppearance="@style/storyLine"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:elevation="4dp"

            >
            <ImageView
                android:id="@+id/icon4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/chris_hemsworth"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/chrisHemsworth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="@string/chrisHemsworth"
                android:textAppearance="@style/storyLine"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>